paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.compile.log
error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:341:14
    |
341 |     test_ptr(unsafe { &I as *const i32 });
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: requested on the command line with `-F unsafe-code`

error[E0600]: cannot apply unary operator `-` to type `u8`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:333:17
    |
333 |     test_arith!(-1);
    |                 ^^ cannot apply unary operator `-`
    |
    = note: unsigned values cannot be negated
help: you may have meant the maximum value of `u8`
    |
313 -             test_unsigned_char($val as u8);
313 +             test_unsigned_char(u8::MAX);
    |

error[E0600]: cannot apply unary operator `-` to type `u16`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:333:17
    |
333 |     test_arith!(-1);
    |                 ^^ cannot apply unary operator `-`
    |
    = note: unsigned values cannot be negated
help: you may have meant the maximum value of `u16`
    |
315 -             test_unsigned_short($val as u16);
315 +             test_unsigned_short(u16::MAX);
    |

error[E0600]: cannot apply unary operator `-` to type `u32`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:333:17
    |
333 |     test_arith!(-1);
    |                 ^^ cannot apply unary operator `-`
    |
    = note: unsigned values cannot be negated
help: you may have meant the maximum value of `u32`
    |
317 -             test_unsigned_int($val as u32);
317 +             test_unsigned_int(u32::MAX);
    |

error[E0600]: cannot apply unary operator `-` to type `usize`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:333:17
    |
333 |     test_arith!(-1);
    |                 ^^ cannot apply unary operator `-`
    |
    = note: unsigned values cannot be negated
help: you may have meant the maximum value of `usize`
    |
319 -             test_unsigned_long($val as usize);
319 +             test_unsigned_long(usize::MAX);
    |

error[E0600]: cannot apply unary operator `-` to type `u64`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:333:17
    |
333 |     test_arith!(-1);
    |                 ^^ cannot apply unary operator `-`
    |
    = note: unsigned values cannot be negated
help: you may have meant the maximum value of `u64`
    |
321 -             test_unsigned_long_long($val as u64);
321 +             test_unsigned_long_long(u64::MAX);
    |

error[E0277]: can't compare `{float}` with `{integer}`
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:310:28
    |
310 |             test_bool($val != 0);
    |                            ^^ no implementation for `{float} == {integer}`
...
335 |     test_arith!(1.5);
    |     ---------------- in this macro invocation
    |
    = help: the trait `PartialEq<{integer}>` is not implemented for `{float}`
    = help: the following other types implement trait `PartialEq<Rhs>`:
              f128
              f16
              f32
              f64
              i128
              i16
              i32
              i64
            and 8 others
    = note: this error originates in the macro `test_arith` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/gcc_c11_tests/atomic/c11-atomic-exec-1/sample_002/target.rs:310:31
    |
310 |             test_bool($val != 0);
    |                               ^ expected floating-point number, found integer
...
335 |     test_arith!(1.5);
    |     ---------------- in this macro invocation
    |
    = note: this error originates in the macro `test_arith` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0308, E0600.
For more information about an error, try `rustc --explain E0277`.